--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "polymer-starter-kit",
+  "name": "socializa-frontend",
   "authors": [
-    "The Polymer Authors"
+    "Daniel Garcia Moreno <danigm@wadobo.com>"
   ],
   "private": true,
   "dependencies": {
@@ -15,7 +15,9 @@
     "iron-pages": "PolymerElements/iron-pages#^1.0.0",
     "iron-selector": "PolymerElements/iron-selector#^1.0.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#~1.1.0",
-    "polymer": "Polymer/polymer#^1.6.0"
+    "polymer": "Polymer/polymer#^1.6.0",
+    "ijs": "^0.99.7",
+    "iron-icons": "^1.1.3"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
