--- a/frontend/manifest.json
+++ b/frontend/manifest.json
@@ -1,10 +1,10 @@
 {
-  "name": "My App",
-  "short_name": "My App",
+  "name": "Socializa",
+  "short_name": "Socializa",
   "start_url": "/?homescreen=1",
   "display": "standalone",
-  "theme_color": "#3f51b5",
-  "background_color": "#3f51b5",
+  "theme_color": "#67ddff",
+  "background_color": "#67ddff",
   "icons": [
     {
       "src": "images/manifest/icon-192x192.png",
