--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -17,7 +17,10 @@
     "paper-icon-button": "PolymerElements/paper-icon-button#~1.1.0",
     "polymer": "Polymer/polymer#^1.6.0",
     "ijs": "^0.99.7",
-    "iron-icons": "^1.1.3"
+    "iron-icons": "^1.1.3",
+    "font-awesome": "fontawesome#^4.6.3",
+    "jquery": "^3.1.1",
+    "jquery.cookie": "jquery-cookie#^1.4.1"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
