Added django-rest-framework: change view by apiview, using django-rest-framework for python-social-auth

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,2 +1,6 @@
 django==1.10.1
 psycopg2==2.6.2
+python-social-auth==0.2.21
+djangorestframework==3.4.7
+django-rest-framework-social-oauth2==1.0.4
+django-extra-fields==0.8
