--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -20,7 +20,9 @@
     "iron-icons": "^1.1.3",
     "font-awesome": "fontawesome#^4.6.3",
     "jquery": "^3.1.1",
-    "jquery.cookie": "jquery-cookie#^1.4.1"
+    "jquery.cookie": "jquery-cookie#^1.4.1",
+    "paper-input": "^1.1.20",
+    "paper-button": "^1.0.13"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
