Using react for the frontend instead of polymer

--- a/frontend/Makefile
+++ b/frontend/Makefile
@@ -1,4 +1,14 @@
-all: build
+all: serve
 
-build: src/*
-	polymer build
+dev: package.json bower.json
+	npm install
+	bower install
+
+serve: clean
+	./node_modules/.bin/gulp
+
+build: clean
+	./node_modules/.bin/gulp deploy
+
+clean:
+	rm -rf build dist
