Using ES6+ syntax and only npm modules

--- a/frontend/Makefile
+++ b/frontend/Makefile
@@ -1,14 +1,13 @@
 all: serve
 
-dev: package.json bower.json
+dev: package.json
 	npm install
-	bower install
 
 serve: clean
 	./node_modules/.bin/gulp
 
 build: clean
-	./node_modules/.bin/gulp deploy
+	NODE_ENV=production ./node_modules/.bin/gulp deploy
 
 clean:
 	rm -rf build dist
