--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,11 +5,15 @@
   "author": "Daniel Garcia Moreno <danigm@wadobo.com>",
   "license": "GPLv3",
   "devDependencies": {
-    "babel-preset-react": "^6.5.0",
+    "babel-plugin-transform-class-properties": "^6.16.0",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-es2016": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
     "babelify": "^7.3.0",
+    "bootstrap": "^3.3.7",
     "browserify": "^13.0.1",
-    "browserify-shim": "^3.8.12",
-    "debowerify": "^1.5.0",
+    "font-awesome": "^4.6.3",
     "glob": "^7.0.3",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
@@ -23,21 +27,15 @@
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
+    "ijs": "^0.4.0",
+    "jquery": "^3.1.1",
+    "jquery.cookie": "^1.4.1",
     "phantomjs-prebuilt": "^2.1.7",
-    "react-dom": "^15.0.2",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0"
   },
   "dependencies": {
     "react": "^15.0.2",
     "react-dom": "^15.0.2"
-  },
-  "browserify-shim": {
-    "jquery": {
-      "exports": "$"
-    },
-    "jquery-cookie": {
-      "depends": ["jquery"]
-    }
   }
 }
