--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "react": "^15.0.2",
-    "react-dom": "^15.0.2"
+    "react-dom": "^15.0.2",
+    "react-router": "^2.8.1"
   }
 }
