--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,3 +4,4 @@ python-social-auth==0.2.21
 djangorestframework==3.4.7
 django-rest-framework-social-oauth2==1.0.4
 django-extra-fields==0.8
+django-rest-swagger==2.0.6
