frontend: token authentication and set position

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "fetch": "^1.1.0",
     "openlayers": "^3.18.2",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
