--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,9 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "es6-promise": "^3.1.2",
     "fetch": "^1.1.0",
+    "isomorphic-fetch": "^2.2.1",
     "moment": "^2.17.1",
     "openlayers": "^3.18.2",
     "react": "^15.0.2",
