--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "openlayers": "^3.18.2",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
-    "react-router": "^2.8.1"
+    "react-router": "^2.8.1",
+    "react-router-bootstrap": "^0.23.1"
   }
 }
