--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "bootstrap": "^3.3.7",
     "es6-promise": "^3.1.2",
     "fetch": "^1.1.0",
+    "gulp-html-replace": "^1.6.2",
     "isomorphic-fetch": "^2.2.1",
     "moment": "^2.17.1",
     "openlayers": "^3.18.2",
