--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "isomorphic-fetch": "^2.2.1",
     "moment": "^2.17.1",
     "openlayers": "^3.18.2",
+    "qrcode.react": "^0.6.1",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-router": "^2.8.1",
