--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,3 +6,5 @@ djangorestframework==3.5.3
 django-rest-framework-social-oauth2==1.0.4
 django-extra-fields==0.8
 django-rest-swagger==2.1.0
+pylint==1.6.4
+radon==1.4.2
