--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,15 @@
-django==1.10.5
-django-nose==1.4.4
-psycopg2==2.6.2
-djangorestframework==3.5.3
-django-rest-framework-social-oauth2==1.0.5
+celery==4.0.2
+django-celery==3.1.17
+django-celery-beat==1.0.1
+django-celery-results==1.0.1
 django-extra-fields==0.9
+django-nose==1.4.4
+django-rest-framework-social-oauth2==1.0.5
 django-rest-swagger==2.1.1
+django==1.10.5
+djangorestframework==3.5.3
+psycopg2==2.6.2
 pylint==1.6.4
 radon==1.4.2
-social-auth-core==0.2.1
 social-auth-app-django==0.1.0
+social-auth-core==0.2.1
