frontend: Adding translation with i18next
Starting to translate the app to spanish with the i18next module.

To update translations you can use the new makefile command "extract"
that updates the json files in locales directory.

--- a/frontend/Makefile
+++ b/frontend/Makefile
@@ -12,5 +12,8 @@ web: clean
 app: clean
 	NODE_ENV=production ./node_modules/.bin/gulp deploy --app
 
+extract:
+	./node_modules/.bin/gulp i18next
+
 clean:
 	rm -rf build dist
