--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,9 +24,11 @@
     "gulp-less": "^3.1.0",
     "gulp-livereload": "^3.8.1",
     "gulp-notify": "^2.2.0",
+    "gulp-sort": "^2.0.0",
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
+    "i18next-scanner": "^1.5.1",
     "ijs": "^0.4.0",
     "jquery": "^3.1.1",
     "phantomjs-prebuilt": "^2.1.7",
@@ -38,12 +40,16 @@
     "es6-promise": "^3.1.2",
     "fetch": "^1.1.0",
     "gulp-remove-html": "^1.3.0",
+    "i18next": "^7.0.0",
+    "i18next-browser-languagedetector": "^1.0.1",
+    "i18next-xhr-backend": "^1.3.0",
     "isomorphic-fetch": "^2.2.1",
     "moment": "^2.17.1",
     "openlayers": "^3.18.2",
     "qrcode.react": "^0.6.1",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
+    "react-i18next": "^2.1.0",
     "react-router": "^2.8.1",
     "react-router-bootstrap": "^0.23.1"
   }
