--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "es6-promise": "^3.1.2",
     "fetch": "^1.1.0",
     "gulp-remove-html": "^1.3.0",
+    "html-purify": "^1.1.0",
     "i18next": "^7.0.0",
     "i18next-browser-languagedetector": "^1.0.1",
     "i18next-xhr-backend": "^1.3.0",
