--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,8 @@
 sonar.projectKey=socializa
 sonar.projectName=socializa
 sonar.projectVersion=0.1
+#sonar.log.level=DEBUG
+#sonar.verbose=true
 
 # =====================================================
 #   Meta-data for the project
@@ -17,13 +19,16 @@ sonar.links.issue=https://github.com/wadobo/socializa/issues
 # =====================================================
 
 # SQ standard properties
+#sonar.branch=sonar
 sonar.sources=backend/
+#sonar.tests=backend/clue,backend/game,backend/event,backend/player
 
 # Properties specific to language plugins:
 #   - For Python
-sonar.language=py
+#sonar.language=py
 sonar.sourceEncoding=UTF-8
-sonar.python.pylint.reportPath="backend/pylint.out"
-sonar.python.xunit.reportPath="backend/nosetests.xml"
-sonar.python.xunit.skipDetails=false
-sonar.python.coverage.reportPath="backend/coverage.xml"
+sonar.python.pylint_config=backend/.pylintrc
+sonar.python.xunit.reportPath=backend/nosetests.xml
+sonar.python.coverage.reportPath=backend/coverage.xml
+sonar.python.coverage.itReportPath=backend/coverage.xml
+sonar.python.coverage.overallReportPath=backend/coverage.xml
