Tranfered coverage to codacy instead coveralls.

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,12 +22,12 @@ python:
   - "3.6"
 install:
   - pip install -r backend/requirements.txt
-  - pip install coveralls
+  - pip install codacy-coverage
 script:
   - cd backend
   - pylint -f parseable --ignore-patterns="env/" * | tee pylint.out
   - coverage run --branch --source=. ./manage.py test --keepdb --with-xunit
-  - coverage xml -i
+  - coverage xml
+  - python-codacy-coverage -r coverage.xml
   - cd ..
   - sonar-scanner
-after_success: coveralls
