--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,6 +11,7 @@ django==1.10.6
 djangorestframework==3.6.2
 psycopg2==2.7.1
 pylint==1.6.5
-radon==1.4.2
+pylint-django==0.7.2
+radon==1.5.0
 social-auth-app-django==1.1.0
 social-auth-core==1.2.0
