--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,51 +5,34 @@
   "author": "Daniel Garcia Moreno <danigm@wadobo.com>",
   "license": "GPLv3",
   "dependencies": {
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
     "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-es2016": "^6.22.0",
     "babel-preset-react": "^6.23.0",
-    "babelify": "^7.3.0",
     "bootstrap": "^3.3.7",
-    "browserify": "^14.1.0",
     "es6-promise": "^4.1.0",
     "fetch": "^1.1.0",
     "font-awesome": "^4.7.0",
-    "glob": "^7.1.1",
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-connect": "^5.0.0",
-    "gulp-copy": "1.0.0",
-    "gulp-cssimport": "^5.0.0",
-    "gulp-cssmin": "^0.1.7",
-    "gulp-if": "^2.0.2",
-    "gulp-less": "^3.3.0",
-    "gulp-livereload": "^3.8.1",
-    "gulp-notify": "^3.0.0",
-    "gulp-remove-html": "^1.3.0",
-    "gulp-sort": "^2.0.0",
-    "gulp-streamify": "^1.0.2",
-    "gulp-uglify": "^2.1.0",
-    "gulp-util": "^3.0.8",
     "html-purify": "^1.1.0",
     "i18next": "^7.1.2",
     "i18next-browser-languagedetector": "^1.0.1",
+    "i18next-parser": "^0.11.1",
     "i18next-scanner": "^1.7.0",
     "i18next-xhr-backend": "^1.3.0",
-    "ijs": "^0.4.0",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.2.0",
+    "less": "^2.7.2",
     "moment": "^2.17.1",
     "openlayers": "^4.0.1",
-    "phantomjs-prebuilt": "^2.1.14",
     "qrcode.react": "^0.6.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-i18next": "^2.2.0",
     "react-router": "^3.0.0",
     "react-router-bootstrap": "^0.23.1",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.9.0"
+    "webpack": "^2.3.3"
   }
 }
