--- a/frontend/Makefile
+++ b/frontend/Makefile
@@ -26,9 +26,7 @@ indexweb: index.html
 	cat index.html | tr '\n', '\r' | perl -pe 's|<!--<app>-->.*?<!--</app>-->|\1|g' | tr '\r' '\n' > dist/index.html
 
 extract:
-	cd src
-	../node_modules/i18next-parser/bin/cli.js -r -s "::" -k ":::" -f "t" "i18n.t" -l es src/*.js -o ../locales/
-	cd ..
+	cd src && ../node_modules/i18next-parser/bin/cli.js --write-old false -r -s "::" -k ":::" -f "t" "i18n.t" -l es src/*.js -o ../locales/
 
 clean:
 	rm -rf dist
