--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,8 +31,9 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-i18next": "^2.2.0",
-    "react-router": "^3.0.0",
+    "react-router": "^4.0.0",
     "react-router-bootstrap": "^0.23.1",
+    "react-router-dom": "^4.0.0",
     "webpack": "^2.3.3"
   }
 }
