Updated badges for dev branch.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ addons:
         - postgresql-9.5-postgis-2.3
     sonarqube:
         branches:
-          - master
+          - dev
 before_script:
   - psql -U postgres -c "create user socializa password 'socializa'"
   - psql -U postgres -c "create database test_socializa owner socializa"
