--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "author": "Daniel Garcia Moreno <danigm@wadobo.com>",
   "license": "GPLv3",
   "dependencies": {
+    "alertifyjs": "^1.10.0",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
