Phonegap-dev updated

--- a/socializa-app/Makefile
+++ b/socializa-app/Makefile
@@ -1,3 +1,6 @@
+dev:
+	cd ../frontend/; make dev
+
 frontend:
 	cd ../frontend/; make app
 
@@ -6,3 +9,9 @@ android: frontend
 	cp -rf res/* platforms/android/res/
 
 run: android
+
+release: dev frontend
+	rm -rf www/app
+	rm -rf www/index.html
+	cp -rf ../frontend/dist/app/ www/app
+	cp -rf ../frontend/dist/index.html www/index.html
