frontend: Using leaflet for maps instead of openlayers

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,9 +25,10 @@
     "i18next-xhr-backend": "^1.4.2",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.2.1",
+    "leaflet": "^1.1.0",
+    "leaflet-rotatedmarker": "^0.2.0",
     "less": "^2.7.2",
     "moment": "^2.18.1",
-    "openlayers": "^4.2.0",
     "qrcode.react": "^0.7.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
